--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-log = "0.4.21"
-signal-hook = "0.3.17"
+tracing = "0.1"
+tracing-subscriber = "0.3"
