--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,5 @@
-[package]
-name = "mess"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+    "muck"
+]
 
-[dependencies]
-tracing = "0.1"
-tracing-subscriber = "0.3"
