--- a/muck/Cargo.toml
+++ b/muck/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.201", features = ["derive"] }
+serde_json = "1.0.117"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
